--- a/07.display/index.html
+++ b/07.display/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <p>Mensaje de párrafo</p>
+    <p>Mensaje de párrafo</p>
+    <p>Mensaje de párrafo</p>
+    <p>Mensaje de párrafo</p>
+    <p>Mensaje de párrafo</p>
 </body>
 </html>
