--- a/08.position/index.html
+++ b/08.position/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display</title>
+    <title>Position</title>
     <!-- normalize -->
     <link rel="stylesheet" href="./css/normalize.css">
     <!-- css -->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <p>Mensaje de párrafo</p>
-    <p>Mensaje de párrafo</p>
-    <p class="none">Mensaje de párrafo</p>
-    <p>Mensaje de párrafo</p>
-    <p>Mensaje de párrafo</p>
+    <div class="padre">
+        <div class="hijo1"></div>
+        <div class="hijo2"></div>
+        <div class="hijo3"></div>
+    </div>
 </body>
 </html>
